--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "config": "^1.25.1",
     "koa": "^2.0.1",
     "koa-better-body": "^3.0.2",
+    "koa-helmet": "^3.1.0",
     "koa-mount": "^2.0.0",
     "koa-qs": "^2.0.0",
     "koa-router": "^7.0.1",
