--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Koa2 REST API Starter",
   "main": "api.js",
   "scripts": {
-    "start": "rimraf ./dist && babel -d ./dist ./src -s && node dist/api.js",
+    "start": "rimraf ./dist && babel -d ./dist ./src -s && NODE_ENV=production node ./dist/api.js",
     "dev": "nodemon ./dev.js",
+    "lint:js": "eslint ./src",
+    "lint-staged": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": "lint-staged",
   "dependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
@@ -27,7 +30,9 @@
     "eslint-config-airbnb-base": "^11.1.1",
     "eslint-config-prettier": "^1.5.0",
     "eslint-plugin-import": "^2.2.0",
-    "nodemon": "^1.11.0"
+    "lint-staged": "^3.3.1",
+    "nodemon": "^1.11.0",
+    "pre-commit": "^1.2.2"
   },
   "babel": {
     "presets": [
@@ -42,6 +47,7 @@
     ]
   },
   "eslintConfig": {
+    "root": true,
     "extends": [
       "airbnb-base",
       "prettier"
@@ -54,6 +60,9 @@
       "no-console": 1,
       "strict": 2
     }
+  },
+  "lint-staged": {
+    "*.js": "eslint"
   },
   "keywords": [
     "Koa2"
