--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "koa2-api-starter",
   "version": "0.0.1",
   "description": "Koa2 REST API Starter",
-  "main": "api.js",
+  "main": "dev.js",
   "scripts": {
-    "start": "rimraf ./dist && babel -d ./dist ./src -s && NODE_ENV=production node ./dist/api.js",
+    "start": "rimraf ./dist && babel -d ./dist ./src -s && NODE_ENV=production node --harmony ./dist/api.js",
     "dev": "nodemon ./dev.js",
     "lint:js": "eslint ./src",
     "lint-staged": "lint-staged",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test ava",
+    "test:watch": "NODE_ENV=test ava --watch"
   },
-  "pre-commit": "lint-staged",
+  "pre-commit": ["lint-staged", "test"],
   "dependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
@@ -25,6 +26,7 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "ava": "^0.18.2",
     "babel-register": "^6.23.0",
     "eslint": "^3.16.1",
     "eslint-config-airbnb-base": "^11.1.1",
@@ -32,7 +34,18 @@
     "eslint-plugin-import": "^2.2.0",
     "lint-staged": "^3.3.1",
     "nodemon": "^1.11.0",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "supertest": "^3.0.0"
+  },
+  "ava": {
+    "files": [
+      "./src/**/*.spec.js"
+    ],
+    "concurrency": 5,
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
   },
   "babel": {
     "presets": [
@@ -57,7 +70,6 @@
     },
     "rules": {
       "no-param-reassign": 0,
-      "no-console": 1,
       "strict": 2
     }
   },
@@ -68,5 +80,6 @@
     "Koa2"
   ],
   "author": "Aleksey Taranets",
+  "repository": "https://github.com/aleksey-taranets/koa2-api-starter",
   "license": "ISC"
 }
