--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:js": "eslint ./src",
     "lint-staged": "lint-staged",
     "test": "NODE_ENV=test ava",
-    "test:watch": "NODE_ENV=test ava --watch"
+    "test:watch": "NODE_ENV=test ava --watch",
+    "coverage": "nyc --reporter=html npm run test"
   },
   "pre-commit": [
     "lint-staged",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "ava": "^0.18.2",
+    "ava-spec": "^1.1.0",
     "babel-register": "^6.23.0",
     "eslint": "^3.16.1",
     "eslint-config-airbnb-base": "^11.1.1",
@@ -40,6 +42,7 @@
     "eslint-plugin-import": "^2.2.0",
     "lint-staged": "^3.3.1",
     "nodemon": "^1.11.0",
+    "nyc": "^10.1.2",
     "pre-commit": "^1.2.2",
     "supertest": "^3.0.0"
   },
