--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "babel-core": "^6.23.1",
     "babel-preset-env": "^1.2.1",
     "bcrypt": "^1.0.2",
+    "graphql": "^0.9.1",
     "koa": "^2.0.1",
     "koa-better-body": "^3.0.2",
+    "koa-convert": "^1.2.0",
+    "koa-graphql": "^0.6.2",
     "koa-helmet": "^3.1.0",
     "koa-mount": "^2.0.0",
     "koa-qs": "^2.0.0",
