--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "test"
   ],
   "dependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-preset-env": "^1.2.1",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-preset-env": "^1.2.2",
     "bcrypt": "^1.0.2",
     "graphql": "^0.9.1",
-    "koa": "^2.0.1",
+    "koa": "^2.2.0",
     "koa-better-body": "^3.0.2",
     "koa-convert": "^1.2.0",
     "koa-graphql": "^0.6.2",
@@ -30,6 +30,7 @@
     "koa-mount": "^2.0.0",
     "koa-qs": "^2.0.0",
     "koa-router": "^7.0.1",
+    "recursive-readdir-sync": "^1.0.6",
     "rimraf": "^2.6.1",
     "sails-mongo": "^0.12.2",
     "waterline": "^0.11.11",
@@ -38,12 +39,12 @@
   "devDependencies": {
     "ava": "^0.18.2",
     "ava-spec": "^1.1.0",
-    "babel-register": "^6.23.0",
-    "eslint": "^3.16.1",
+    "babel-register": "^6.24.0",
+    "eslint": "^3.17.1",
     "eslint-config-airbnb-base": "^11.1.1",
     "eslint-config-prettier": "^1.5.0",
     "eslint-plugin-import": "^2.2.0",
-    "lint-staged": "^3.3.1",
+    "lint-staged": "^3.4.0",
     "nodemon": "^1.11.0",
     "nyc": "^10.1.2",
     "pre-commit": "^1.2.2",
