--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "babel-preset-env": "^1.2.2",
     "bcrypt": "^1.0.2",
     "graphql": "^0.9.1",
+    "jsonwebtoken": "^7.3.0",
     "koa": "^2.2.0",
     "koa-better-body": "^3.0.2",
     "koa-convert": "^1.2.0",
     "koa-graphql": "^0.6.2",
     "koa-helmet": "^3.1.0",
+    "koa-jwt": "^3.0.1",
+    "koa-logger": "^2.0.1",
     "koa-mount": "^2.0.0",
     "koa-qs": "^2.0.0",
     "koa-router": "^7.0.1",
